# cmake-example

./: .gitignore  CMakeLists.txt  CMakePresets.json  INFO.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: dependencies.cmake
cmake/toolchains/: example-toolchain.cmake
src/: CMakeLists.txt  daemon.cpp  network.cpp  network.h
